Fixing my account tab layout break

--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_productpage.less
@@ -113,3 +113,16 @@ body{
         }
     }
 }
+
+@media (max-width: 767px){
+    .block.block-collapsible-nav{
+        top: 10px;
+
+        .title.block-collapsible-nav-title{
+            border-top: none;
+            border-bottom: none;
+            position: absolute;
+            top: -15px;
+        }
+    }
+}
