--- a/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_productpage.less
@@ -104,6 +104,19 @@ body{
     }
 }
 
+@media (max-width: 767px){
+    .block.block-collapsible-nav{
+        top: -10px;
+
+        .title.block-collapsible-nav-title{
+            border-top: none;
+            border-bottom: none;
+            position: absolute;
+            top: -15px;
+        }
+    }
+}
+
 
 
 
